Fix value left spacing

--- a/packages/components/src/ObjectViewer/JSONLike/JSONLike.scss
+++ b/packages/components/src/ObjectViewer/JSONLike/JSONLike.scss
@@ -106,6 +106,7 @@
 		background: none;
 		padding: 0;
 		cursor: default;
+		margin-left: 4px;
 	}
 
 	.line-value-selected {
